# ProjectPhoenix

./: .env.example  .gitignore  Activate.ps1  FullProjectReview.txt  ProjectPhoenixReview.txt  ProjectPhoenix_FileStructure.txt  ProjectTree.txt  README.md  main.py  project_tree.txt  pyproject.toml  python_files.txt  requirements.txt  run_all_tests.py
ai_decision/: ai_engine.py  ai_logger.py  ai_models.py  ai_reasoning.py  ai_scoring.py  ai_validator.py
alert_system/: alert_engine.py  alert_formatter.py  alert_logger.py  alert_models.py  alert_sender.py
backtesting/: backtest_engine.py  backtest_logger.py  backtest_models.py  backtest_simulator.py  backtest_statistics.py  backtest_validator.py
broker/: broker_engine.py  broker_factory.py  broker_interface.py  broker_logger.py  broker_models.py
config/: config_engine.py  config_loader.py  config_logger.py  config_models.py  config_validator.py  settings.yaml
core/: __init__.py  config.py  logger.py
dashboard/: dashboard_controller.py  dashboard_engine.py  dashboard_logger.py  dashboard_models.py  dashboard_renderer.py
database/: database_connection.py  database_engine.py  database_logger.py  database_models.py  database_repository.py
deployment/: deployment_engine.py  deployment_logger.py  deployment_models.py  health_monitor.py  runtime_manager.py
execution/: execution_engine.py  execution_logger.py  execution_models.py  execution_rules.py  execution_validator.py
execution_engine/: execution_context.py  execution_engine.py  execution_logger.py  execution_manager.py  execution_models.py  (+2 more)
(+330 files in other folders)
