[project]
name = "projectphoenix"
version = "1.0.0"
description = "Professional Algorithmic Trading System"
requires-python = ">=3.14"

authors = [
    { name = "Dhruv Chavda" }
]

[tool.projectphoenix]
project = "Project Phoenix"
phase = "Development Phase V1.0"
milestone = "M1.1 Repository Initialization"